# power-scouter

./: .dccache  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Makefile.toml  README.md
.github/workflows/: pull-request.yml
api/: Cargo.toml
api/src/: main.rs
front/: Cargo.toml
front/public/styles/: field.css
front/src/: main.rs  styles.css
front/src/components/: button.rs  field.rs  header.rs  mod.rs  score_bubble.rs  score_competitor.rs  title.rs
front/src/helpers/: calculations.rs
front/src/models/: category.rs  competitor.rs  gendre.rs  mod.rs  movements.rs  score.rs  units.rs
front/src/styles/: button.css  header.css  index.css  score_bubble.css
public/styles/: index.css
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/helpers/: calculations.rs
shared/src/models/: category.rs  competitor.rs  gendre.rs  movements.rs  score.rs  units.rs
src/: lib.rs  main.rs
src/components/: button.rs  field.rs  header.rs  score_bubble.rs  score_competitor.rs  title.rs
src/models/: category.rs  competitor.rs  score.rs
src/routes/: home.rs
static/: index.html
static/assets/dioxus/: dioxus.js  dioxus_bg.wasm  powers-couter.js  powers-couter_bg.wasm
static/assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
static/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
static/assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
static/static/: index.html
static/static/assets/dioxus/: powers-couter.js  powers-couter_bg.wasm
static/static/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
static/styles/: index.css  score.css
