[package]
name = "power-scouter"
version = "0.2.0"
edition = "2021"
publish = false

[workspace]
members = ["front", "shared", "."]

[dependencies]
shuttle-runtime = "0.39.0"
actix-web = "4.3.1"
shuttle-actix-web = "0.39.0"
tokio = "1.26.0"
actix-files = "0.6.2"
serde = "1.0.152"
serde_json = "1.0.94"
tracing = "0.1.40"
shared = { path = "./shared" }
actix-cors = "0.7.0"
mime = "0.3.17"
