[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
debug = false
lto = true
opt-level = "s"
panic = "abort"

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.1"
