[package]
name = "front"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
debug = false
lto = true
opt-level = "s"
panic = "abort"

[dependencies]
dioxus = "0.3.2"
dioxus-helmet = "0.2.4"
dioxus-web = "0.3.1"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
shared = { path = "../shared" }
